<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/titleRegOrFor"
            style="@style/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_forget" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/forget_current_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forget_step1"
            style="@style/operation_step_description"
            android:layout_marginRight="5dp"
            android:text="@string/forget_step1" />

        <TextView
            android:id="@+id/forget_step2"
            style="@style/operation_step_description"
            android:layout_marginRight="5dp"
            android:text="@string/forget_step2" />

        <TextView
            android:id="@+id/forget_step3"
            style="@style/operation_step_description"
            android:layout_marginRight="5dp"
            android:text="@string/forget_step3" />

        <TextView
            android:id="@+id/forget_step4"
            style="@style/operation_step_description"
            android:text="@string/forget_step4" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container_forget_first_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_current_state"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/forget_first_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/phone_num" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_verify_code"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/get_valid_code"
            android:textColor="#ffffff"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_qrcode"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/qrcode"
            android:visibility="gone" />
    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_second_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_forget_first_input"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/forget_pass_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/input_pass_again" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forget_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_second_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/next_step"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/binding_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_second_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/next_step"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_forget_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forget_btn"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forget_finish"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

</RelativeLayout>
